<resources>
    <string name="app_name">zigzag_challenge</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_string">2017년 6월 4주차 랭킹</string>
    <string name="filter">필터</string>
    <string name="search">쇼핑몰 검색</string>

    <string name="ranking">%1$s차 랭킹</string>

    <string name="all">모두</string>
    <string name="teen">10대</string>
    <string name="twenties">20대</string>
    <string name="thirties">30대</string>
    <string name="filter_title">쇼핑몰 필터</string>
    <string name="initialize">초기화</string>


</resources>
