<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/filter_background"
    android:clipChildren="false">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/ToolbarStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:clipChildren="false"
        app:contentInsetStartWithNavigation="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/app_name"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:padding="14dp"
            app:srcCompat="@drawable/ic_close_black_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/filter_title"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="8dp"
            android:text="@string/initialize"
            android:textColor="@color/soda"
            app:chipBackgroundColor="@color/white"
            app:chipCornerRadius="2dp"
            app:chipStrokeColor="@color/soda"
            app:chipStrokeWidth="1dp"
            app:rippleColor="@color/soda" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/ages"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/dark_grey"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="연령대"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/age_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingTop="10dp"
        android:paddingRight="16dp"
        android:paddingBottom="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ages">

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Action"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="10대"
            android:textAlignment="center"
            android:textColor="@color/soda"
            app:chipBackgroundColor="@color/white"
            app:chipCornerRadius="8dp"
            app:chipStrokeColor="@color/soda"
            app:chipStrokeWidth="1dp"
            app:rippleColor="@color/soda" />

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Action"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="20대 초반"
            android:textAlignment="center"
            android:textColor="@color/soda"
            app:chipBackgroundColor="@color/white"
            app:chipCornerRadius="8dp"
            app:chipStrokeColor="@color/soda"
            app:chipStrokeWidth="1dp"
            app:rippleColor="@color/soda" />

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Action"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="20대 중반"
            android:textAlignment="center"
            android:textColor="@color/soda"
            app:chipBackgroundColor="@color/white"
            app:chipCornerRadius="8dp"
            app:chipStrokeColor="@color/soda"
            app:chipStrokeWidth="1dp"
            app:rippleColor="@color/soda" />

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Action"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="20대 후반"
            android:textAlignment="center"
            android:textColor="@color/soda"
            app:chipBackgroundColor="@color/white"
            app:chipCornerRadius="8dp"
            app:chipStrokeColor="@color/soda"
            app:chipStrokeWidth="1dp"
            app:rippleColor="@color/soda" />
        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Action"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="30대 초반"
            android:textAlignment="center"
            android:textColor="@color/soda"
            app:chipBackgroundColor="@color/white"
            app:chipCornerRadius="8dp"
            app:chipStrokeColor="@color/soda"
            app:chipStrokeWidth="1dp"
            app:rippleColor="@color/soda" />
        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Action"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="30대 중반"
            android:textAlignment="center"
            android:textColor="@color/soda"
            app:chipBackgroundColor="@color/white"
            app:chipCornerRadius="8dp"
            app:chipStrokeColor="@color/soda"
            app:chipStrokeWidth="1dp"
            app:rippleColor="@color/soda" />
        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Action"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="30대 후반"
            android:textAlignment="center"
            android:textColor="@color/soda"
            app:chipBackgroundColor="@color/white"
            app:chipCornerRadius="8dp"
            app:chipStrokeColor="@color/soda"
            app:chipStrokeWidth="1dp"
            app:rippleColor="@color/soda" />

    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/dark_grey"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="스타일"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age_group" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/style_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingTop="10dp"
        android:paddingRight="16dp"
        android:paddingBottom="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/style">

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Action"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="10대"
            android:textAlignment="center"
            android:textColor="@color/pink"
            app:chipBackgroundColor="@color/white"
            app:chipCornerRadius="8dp"
            app:chipStrokeColor="@color/pink"
            app:chipStrokeWidth="1dp"
            app:rippleColor="@color/soda" />

    </com.google.android.material.chip.ChipGroup>


    <TextView
        android:id="@+id/select"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@color/soda"
        android:text="선택완료"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>